fix: update z-index for header

--- a/src/shared/ui/layouts/BaseLayout/BaseLayout.module.scss
+++ b/src/shared/ui/layouts/BaseLayout/BaseLayout.module.scss
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 4;
 }
 
 .main {
